testdata/zkc/invalid/type_06.zkc
//error:3:1-11:cyclic definition for b
type outer = a
type b = a
type a = b